stirling-pdf/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: frooodle/s-pdf:1.2.0
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          volumeMounts:
            - name: trainingdata
              mountPath: /usr/share/tessdata
            - name: config
              mountPath: /configs
      volumes:
        - name: trainingdata
          persistentVolumeClaim:
            claimName: stirling-pdf
        - name: config
          persistentVolumeClaim:
            claimName: config
