stirling-pdf/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
