stirling-pdf/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling.mandariini.uk`)
      kind: Rule
      services:
        - name: stirling-pdf
          namespace: stirling-pdf
          port: 8080
  tls:
    secretName: mandariini-uk-tls
