stirling-pdf/stirling-pdf.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: frooodle/s-pdf:0.46.1
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          volumeMounts:
            - name: trainingdata
              mountPath: /usr/share/tessdata
      volumes:
        - name: trainingdata
          persistentVolumeClaim:
            claimName: stirling-pdf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stirling-pdf
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdf.mandariini.uk`)
      kind: Rule
      services:
        - name: stirling-pdf
          namespace: stirling-pdf
          port: 8080
  tls:
    secretName: mandariini-uk-tls
